--- a/NuptialLogAndroid/app/src/main/AndroidManifest.xml
+++ b/NuptialLogAndroid/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
-        <activity android:name=".UserActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
         <activity android:name=".WeatherActivity" />
         <activity
                 android:name=".ChangelogActivity"
