--- a/NuptialLogAndroid/app/build.gradle
+++ b/NuptialLogAndroid/app/build.gradle
@@ -20,6 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -33,7 +36,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation "androidx.security:security-crypto:1.1.0-alpha02"
+    implementation 'androidx.security:security-crypto:1.1.0-alpha02'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
